[workspace]
resolver = "2"
members = [
  # PathExplorer Zome
  "crates/path_explorer",
  # Playground
  "playground/zomes/tasker_model",
  "playground/zomes/tasker",
  "playground/zomes/agent_directory",
  "playground/zomes/agent_directory_integrity",
  "playground/zomes/profiles",
  "playground/zomes/profiles_integrity",
  #"sweettest",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.163", default-features = false }
hdi = { version = "=0.3.2", default-features = false }
hdk = { version = "=0.2.2", default-features = false }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-2.2" }
time_indexing = { git = "https://github.com/ddd-mtl/time-indexing", branch = "hdk-2.2" }

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true

[profile.release.build-override]
opt-level = "z"
