[workspace]
resolver = "2"
members = [
  # PathExplorer Zome
  "crates/path_explorer",
  # Playground
  #"playground/zomes/tasker_model",
  #"playground/zomes/tasker",
  #"playground/zomes/agent_directory",
  #"playground/zomes/agent_directory_integrity",
  #"playground/zomes/profiles",
  #"playground/zomes/profiles_integrity",
  ##"sweettest",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

[workspace.lints.rust]
non_upper_case_globals = "allow"
unused_doc_comments = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
unused_attributes = "allow"

[workspace.dependencies]
serde = { version = "=1.0.203", default-features = false }
hdi = { version = "=0.6.0-rc.2", default-features = false }
hdk = { version = "=0.5.0-rc.2", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-5.0" }
time_indexing = { git = "https://github.com/ddd-mtl/time-indexing", branch = "hdk-5.0" }

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true

[profile.release.build-override]
opt-level = "z"
