[package]
name = "path_explorer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
hdk.workspace = true

zome_utils.workspace = true
time_indexing.workspace = true

path_explorer_types = {path = "../path_explorer_types" }
